<resources>
    <string name="app_name">Loft</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="card">Card</string>
    <string name="menu">Menu</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="cocktail">Cocktail</string>
    <string name="units">Units:</string>
    <string name="money">R$</string>
    <string name="ingredient">Ingredients</string>
    <string name="addCard">Add to the card</string>
    <string name="cancelbtn">Cancel</string>
    <string name="addedToCard">Added to the card</string>
    <string name="itens">itens</string>
    <string name="value">Value:</string>
    <string name="taxService">Service Tax</string>
    <string name="total">Total</string>
    <string name="wantDelete">Do you want to delete?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>

    <!-- credentials -->
    <string name="Email">E-mail</string>
    <string name="Password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="name">Name</string>
    <string name="createAccount">Create Account</string>
    <string name="noAccount">Don\'t have an account?</string>

    <string name="invalidInformation">Invalid Information</string>
    <string name="invalidEmail">Invalid email</string>
    <string name="accountCreatedSuccessfuly">Account Created Successfully</string>
    <string name="infoMissing">Information is missing</string>
    <string name="invalidUser">Invalid user or password</string>
    <string name="detect">Detect table QR Code</string>
    <string name="problemQr">Problem to read QR code, please try again</string>
    <string name="Table">Table</string>
    <string name="itemDel">Item deleted</string>
    <string name="confirmCard">Confirm card?</string>
    <string name="confirm">Confirm card</string>
    <string name="confirmed">Confirmed</string>
    <string name="pending">pending</string>

</resources>
