<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".card.DeleteActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/border">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:text="@string/wantDelete"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:id="@+id/tvNameDelete"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:layout_width="wrap_content"
            style="@style/buttonText"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancelYes"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_yellow_btn"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:text="@string/Yes"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancelNo"
            android:background="@drawable/rounded_yellow_btn"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:text="@string/No"/>

    </LinearLayout>

</LinearLayout>