<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardActivity"
    android:orientation="vertical"
    android:background="@color/loftSoftDark">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbarLayout">

        <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                android:layout_weight="1"
                android:background="@color/loftDark"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/app_name"
                    android:paddingRight="15dp"
                    android:textSize="30dp"
                    android:textColor="@color/loftLight"/>
        </android.support.v7.widget.Toolbar>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:paddingTop="15dp"
                android:background="@color/loftDark"
                android:textColor="@color/loftLight"
                android:textSize="25dp"
                android:textAlignment="center"
                android:text="@string/card"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_shape_background">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/itemCount"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/itens"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/value"
                android:textSize="20sp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/cardValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="000"
                android:textSize="20sp"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"/>

            <TextView
                android:id="@+id/moneySign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/money"
                android:textSize="20sp"
                android:layout_toLeftOf="@+id/cardValue"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/taxService"
                android:textSize="20sp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"/>

            <TextView
                    android:id="@+id/serviceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="000"
                    android:textSize="20sp"
                    android:layout_marginRight="20dp"
                    android:layout_alignParentRight="true"/>

            <TextView
                    android:id="@+id/moneySignService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="@string/money"
                    android:textSize="20sp"
                    android:layout_toLeftOf="@+id/serviceValue"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/totalValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="000"
                android:textSize="25sp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/moneyTotalSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/money"
                android:textSize="25sp"
                android:layout_toLeftOf="@id/totalValue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/total"
                android:textSize="25sp"
                android:layout_toLeftOf="@id/moneyTotalSign"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rvCardList"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>