<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".credentials.Login"
        android:background="@color/colorBackground">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/loft"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="112dp" android:id="@+id/imageView"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="13"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView" android:id="@+id/emailField"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:textColorHint="@color/colorHint"
            android:backgroundTint="@color/colorHint"
            android:hint="@string/Email" style="@style/Widget.AppCompat.EditText" android:singleLine="true"
            android:textColor="@color/colorFont" android:layout_marginEnd="9dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintStart_toStartOf="@+id/emailField"
            app:layout_constraintEnd_toEndOf="@+id/emailField" android:id="@+id/passwordField"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/emailField"
            android:textColorHint="@color/colorHint"
            android:backgroundTint="@color/colorHint"
            android:hint="@string/Password" style="@style/Widget.AppCompat.EditText" android:singleLine="true"
            android:textColor="@color/colorFont"/>
    <android.support.design.button.MaterialButton
            android:text="@string/SignIn"
            style="@style/buttonText"
            android:onClick="bttnClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/loftYellow"
            app:layout_constraintStart_toStartOf="@+id/passwordField" app:layout_constraintEnd_toEndOf="@+id/passwordField"
            android:id="@+id/signInButton" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordField"/>
    <TextView
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/forgotPassword"
            android:textColor="@color/colorFont"
            android:textAlignment="center"
            android:textSize="6pt"
            android:ems="9"
            app:layout_constraintStart_toStartOf="@+id/signInButton"
            app:layout_constraintEnd_toEndOf="@+id/signInButton" android:id="@+id/recoverPasswordLink"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/signInButton"/>
    <TextView
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Don't have an account?"
            android:textColor="@color/colorFont"
            android:textAlignment="center"
            android:textSize="7pt"
            android:ems="10"
            app:layout_constraintStart_toStartOf="@+id/recoverPasswordLink"
            app:layout_constraintEnd_toEndOf="@+id/recoverPasswordLink" android:id="@+id/editText6"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/recoverPasswordLink" android:layout_width="wrap_content"
    />
    <TextView
            android:clickable="true"
            android:onClick="click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Create Account"
            android:textColor="@color/colorFont"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="7pt"
            android:ems="10"
            app:layout_constraintStart_toStartOf="@+id/editText6" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editText6" android:id="@+id/editText7"
            app:layout_constraintTop_toBottomOf="@+id/editText6"
            app:layout_constraintVertical_bias="0.1" android:layout_marginBottom="16dp"
    />

</android.support.constraint.ConstraintLayout>