<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".credentials.CreateAccount"
        android:background="@color/colorBackground">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/loft"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/imageView2" android:layout_marginTop="64dp" app:layout_constraintTop_toTopOf="parent"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/insert_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/colorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

        <android.support.design.widget.TextInputEditText
                android:backgroundTint="@color/colorHint"
                android:textColor="@color/colorFont"
                android:id="@+id/insert_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/insert_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/colorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/insert_name" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

        <android.support.design.widget.TextInputEditText
                android:backgroundTint="@color/colorHint"
                android:textColor="@color/colorFont"
                android:id="@+id/insert_phone_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNumber"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/insert_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/colorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/insert_phone" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

        <android.support.design.widget.TextInputEditText
                android:backgroundTint="@color/colorHint"
                android:textColor="@color/colorFont"
                android:id="@+id/insert_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/insert_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/colorHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/insert_email" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

        <android.support.design.widget.TextInputEditText
                android:backgroundTint="@color/colorHint"
                android:textColor="@color/colorFont"
                android:id="@+id/insert_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.button.MaterialButton
            android:id="@+id/create_account_button"
            style="@style/Widget.MaterialComponents.Button"
            android:text="@string/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/insert_password"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"/>


</android.support.constraint.ConstraintLayout>